data/derived/fa15/progs/unify/prog3732.ml.out
Characters 432-433:
  | Circ	(circ1,circ2)       -> eval(circ1,x,y)**2+eval(circ2,x,y)**2
                                                 ^
Error: This expression has type int but an expression was expected of type
         float
